anythingllm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: digitalocean-issuer
    ingress.kubernetes.io/ssl-passthrough: "true"
    ingress.kubernetes.io/whitelist-source-range: 0.0.0.0
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
  name: anythingllm
  namespace: anythingllm
spec:
  rules:
  - host: askl7.test.l7informatics.com
    http:
      paths:
      - backend:
          service:
            name: anything-llm
            port:
              number: 3001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - askl7.test.l7informatics.com
    secretName: askl7-l7informatics-com
